# geobr

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE-text.html  NAMESPACE  NEWS.md  README.md  appveyor.yml  authors.html  authors.md  codecov.yml  contributor_guide.md  index.html  index.md  llms.txt  pkgdown.yml  read_mesoregiao.R  read_uf.R  search.json  sitemap.xml
.git-rewrite/: backup-refs  commit  index  message  parse  revs
R/: brazil_2010.R  correspondence_table_stategrid.R  corresptb.R  crosswalk_pre.R  download_fun.R  download_metadata.R  geobr.R  grid_state_correspondence_table.R  list_geobr.R  lookup_muni.R  read_amazon.R  read_areaponderacao.R  read_biomes.R  read_census_tract.R  read_conservation_units.R  read_country.R  read_disaster_risk_area.R  read_health_facilities.R  read_health_services.R  read_immediate_region.R  read_indigenous_land.R  read_intermediate_region.R  read_meso_region.R  read_mesoregiao.R  read_metro_area.R  read_micro_region.R  read_microregiao.R  read_municipality.R  read_municipality_local.R  read_municipio.R  read_region.R  read_rgi.R  read_rgint.R  read_semiarid.R  read_setorcensitario.R  read_state.R  read_statistical_grid.R  read_statistical_grid.R.orig  read_uf.R  read_urban_area.R  (+2 more)
articles/: index.html  index.md  intro_to_geobr.html  intro_to_geobr.md
data/: _Crosswalk_pre.rda  correspondence_table_statgrid.RData  correspondence_table_statgrid.rds  gid_state_correspondence_table.RData  grid_state_correspondence_table.RData  temp_empty2.rda
data_prep/: .RData  _targets.R
dev/: LICENSE-text.html  LICENSE-text.md  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
doc/: Basic-Usage.R  Basic-Usage.Rmd  Basic-Usage.html  Georeferencing-gain.R  Georeferencing-gain.Rmd  Georeferencing-gain.html
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml
geobr.Rcheck/: geobr-Ex.R  geobr-Ex.Rout
man/: brazil_2010.Rd  download_fun.Rd  download_metadata.Rd  geobr.Rd  (+30 more)
python-package/: CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  conda_requirements.txt  pip_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_mining.py
python-package/examples/: 1. Plotting geobr logo.ipynb  1. intro-to-geobr.html  1. intro-to-geobr.ipynb  2. What is the furthest place from a health facility?.ipynb  duckdb_demo.ipynb
python-package/geobr/: __init__.py  _cache.py  _duckdb_backend.py  _filter.py  _output.py  cep_to_state.py  constants.py  download_all_layers.py  grid_state_correspondence_table.py  list_geobr.py  lookup_muni.py  read_amazon.py  read_biomes.py  read_capitals.py  read_census_tract.py  read_comparable_areas.py  read_conservation_units.py  read_country.py  read_disaster_risk_area.py  read_favela.py  read_health_facilities.py  read_health_region.py  read_immediate_region.py  read_indigenous_land.py  read_intermediate_region.py  read_meso_region.py  read_metro_area.py  read_micro_region.py  read_mining_processes.py  read_municipal_seat.py  read_municipality.py  read_neighborhood.py  read_polling_places.py  read_pop_arrangements.py  read_quilombola_land.py  read_region.py  read_schools.py  read_semiarid.py  read_state.py  read_statistical_grid.py  (+5 more)
python-package/geobr/data/: br_offcoast.parquet  grid_state_correspondence_table.csv
python-package/helpers/: diff_packages.py  translate_from_R.py
python-package/helpers/template/: function.py  test.py
python-package/tests/: conftest.py  read_state.py  test_arrow_output.py  test_cep_to_state.py  test_download_all_layers.py  test_duckdb_auto_resolve.py  test_duckdb_auto_resolve_errors.py  test_duckdb_geo.py  test_duckdb_join.py  test_duckdb_network.py  test_duckdb_output.py  test_duckdb_session.py  test_duckdb_to_geopandas.py  test_filter.py  test_filter_params.py  test_grid_state_correspondence_table.py  test_list_geobr.py  test_lookup_muni.py  test_lookup_muni_v2.py  test_output.py  test_read_amazon.py  test_read_biomes.py  test_read_capitals.py  test_read_census_tract.py  test_read_comparable_areas.py  test_read_conservation_units.py  test_read_country.py  test_read_disaster_risk_area.py  test_read_favela.py  test_read_geobr_hybrid.py  test_read_health_facilities.py  test_read_health_region.py  test_read_health_region_v2.py  test_read_immediate_region.py  test_read_indigenous_land.py  test_read_intermediate_region.py  test_read_meso_region.py  test_read_metro_area.py  test_read_micro_region.py  test_read_municipal_seat.py  (+16 more)
python-package/tests/samples/: metadata_geobr_v2.parquet
(+700 files in other folders)
