[tool.poetry]
authors = ["João Carabetta", "Rafael H. M. Pereira", "Caio Nogueira Goncalves", "Bernardo Furtado"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python",
]
description = "geobr: Download Official Spatial Data Sets of Brazil"
homepage = "https://github.com/ipeaGIT/geobr"
license = "MIT"
name = "geobr"
packages = [
  {include = "geobr"},
]
readme = "README.md"
repository = "https://github.com/ipeaGIT/geobr"
version = "0.2.1"

[tool.poetry.dependencies]
geopandas = "^0.14.0"
shapely = "^1.7.0"
python = "^3.9"
requests = "^2.25.1"
lxml = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | helpers/template
)
'''