[project]
name = "geobr"
version = "0.3.0"
description = "geobr: Download Official Spatial Data Sets of Brazil"
readme = "README.md"
requires-python = "<4.0,>=3.9"
license = {text = "MIT"}
authors = [
    {name = "João Carabetta"},
    {name = "Rafael H. M. Pereira"},
    {name = "Caio Nogueira Goncalves"},
    {name = "Bernardo Furtado"},
]
dependencies = [
    "geopandas>=1.0.0,<=1.1",
    "shapely>=1.7.0,<=2.1.0",
    "requests<3.0.0,>=2.25.1",
    "urllib3<2.0.0,>=1.26.0",
    "lxml<6.0.0,>=5.1.0",
    "html5lib==1.1",
    "pyarrow>=15.0.0",
    "rapidfuzz>=3.0",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python",
]

[project.optional-dependencies]
duckdb = ["duckdb>=1.0.0"]
all = ["duckdb>=1.0.0"]

[project.urls]
homepage = "https://github.com/ipeaGIT/geobr"
repository = "https://github.com/ipeaGIT/geobr"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "geobr",
    "geobr/data",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | helpers/template
)
'''

[dependency-groups]
dev = [
    "pytest<7.0,>=6.0",
    "pytest-xdist>=3.5.0",
    "jinja2<4.0.0,>=3.1.4",
    "fire<1.0.0,>=0.5.0",
]

[tool.pytest.ini_options]
markers = [
    "network: tests that download data from the internet",
]
